--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="photos-grid">
       <div class="row">
         <div class="col">
-          <a href="https://repl.it/@RozhokChannel/Timas-website#assess/style.css">
+          <a href="https://Timas-website.rozhokchannel.repl.co">
           <img class="photo" src="images\2.jpg" alt="tima">
           </a>
           <h3>Temirkhan Omarov</h3>
