--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="https://repl.it/@RozhokChannel/Timas-website#assess/style.css">Temirkhan</a>
+              <a class="nav-link" aria-current="page" href="https://Timas-website.rozhokchannel.repl.co">Temirkhan</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://yernaz06.github.io/">Yernaz</a>
